--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "parcel-bundler": "^1.9.7"
   },
   "dependencies": {
-    "gsap": "^2.0.2"
+    "gsap": "^2.0.2",
+    "three": "^0.97.0"
   }
 }
